I fixed some issues with the readability of the web page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,7 @@ body{
     text-align: center;
     background-color:var(--headline-color-on-white)
 }
+/*This is the header CSS for all of the pages*/
 header{
     background-color: #3FA3DA;
     display: flex;
@@ -40,20 +41,20 @@ header{
 }
 .logo{
     max-width: 10%;
-    margin-left: 0;
-    padding: 5px;
+    padding: 2px;
   
   }
   nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+    margin:0 20px;
     
   }
   #allnavs a{
     max-width: 100px;
     text-decoration: none;
+    color: black;
     border: 5px solid black;
     padding: 2.5% 5%;
     border-radius: 5px;
@@ -65,6 +66,12 @@ header{
     background-color:#3FA3DA;
     color: white;
   }
+  /*-----------------------------------*/
+
+
+
+  /*This is the CSS specifically for the Home Page*/
+
   .pagetitles{
     max-width: 100%;
     text-align: center;
@@ -73,11 +80,27 @@ header{
     max-width: 100%;
   }
  .homep1{
-    padding: 0 5% 0 5%;
+    padding: 0 15% 0 15%;
+    background-color: #3FA3DA;
  }
- .homep2{
-    padding:0 5% 0 5% ;
+
+ /*--------------------------------------*/
+
+ /*This is CSS specifically for the Destinations page*/
+ .grid_for_destinations{
+  display: grid;
+  grid-template-columns:1fr 1fr;
  }
+ .destinationsp1_pic{
+  max-width: fit-content;
+ }
+  .destinationsp1{
+    padding: 0 ;
+  }
+ 
+
+ /*-----------------------------------------------*/
+ /*This is the footer Css for all pages*/
   footer{
     display: flex;
     align-items: center;
@@ -85,6 +108,7 @@ header{
     border: 5px solid black;
     border-radius:5px;
     max-width: 100%;
+    background-color: #3FA3DA;
   }
   footer p {
     margin: 5%;
@@ -93,6 +117,7 @@ header{
   footer a {
     text-decoration: none;
     padding: 2%;
+    color: black;
   }
   footer a:hover{
     background-color: #57B52F;
@@ -107,3 +132,4 @@ header{
   .social_media a{
     margin:5%;
   }
+  /*--------------------------------------------/*
